# AIGS-Volumetric-Clouds

./: .cursorignore  .gitignore  README.md  VolumetricCloudsAI.sln
Source/Runtime/: Runtime.vcxproj
Source/Runtime/Application/: Window.cpp
Source/Runtime/Asset/: ShaderLoader.cpp
Source/Runtime/Camera/: CameraController.cpp
Source/Runtime/Core/: DeviceGL.cpp
Source/Runtime/Shader/: ShaderProgram.cpp
Source/Runtime/Texture/: Texture3DObject.cpp  Texture3DObject.h  TextureObject.cpp  TextureObject.h
Source/VolumetricCloudsRender/: Main.cpp  VolumetricCloudsRender.filters  VolumetricCloudsRender.vcxproj  VolumetricCloudsRenderApplication.cpp  VolumetricCloudsRenderApplication.h  VolumetricCloudsRenderPass.cpp  VolumetricCloudsRenderPass.h  VolumetricCloudsRenderUtils.cpp  VolumetricCloudsRenderUtils.h  VolumetricCloudsSkyPass.cpp  VolumetricCloudsSkyPass.h
Source/VolumetricCloudsTraining/: main.py  pyproject.toml
Source/VolumetricCloudsTraining/config/: config.yaml  config_exp0_overfit_general.yaml  config_exp0_overfit_singleview.yaml  config_exp1_buffers_general.yaml  config_exp1_buffers_singleview.yaml  config_exp2_data_efficiency_general.yaml  config_exp2_data_efficiency_singleview.yaml
Source/VolumetricCloudsTraining/scripts/: analyze_experiments.py  make_paper_qual_figures.py  plot_experiments.py
Source/VolumetricCloudsTraining/src/VolumetricCloudsTraining/: __init__.py  dataset_cloud_pairs.py  infer_unet.py  pfm_io.py  train_unet.py
Source/VolumetricCloudsTraining/src/VolumetricCloudsTraining/models/: unet.py
(+17 files in other folders)
